--- a/bosuutap.html
+++ b/bosuutap.html
@@ -192,7 +192,7 @@
                     </div>
                     <a class="text-decoration-none text-black fw-normal" href="bosuutap.html">BỘ SƯU TẬP</a>
                     <a class="text-decoration-none text-black fw-normal" href="duanthicong.html">DỰ ÁN THI CÔNG</a>
-                    <a class="text-decoration-none text-black fw-normal" href="">TƯ VẪN MẪU</a>
+                    <a class="text-decoration-none text-black fw-normal" href="tuvanmau.html">TƯ VẪN MẪU</a>
 
 
                 </div>
@@ -212,71 +212,61 @@
         </div>
     </nav>
     <main>
+
+        <div>
+            <img src="assets/images/bst.jpg" class="d-block w-100 object-cover" height="486px" alt="banner bst">
+            <h2
+                style="position: absolute; top: 70%; left: 10%; transform: translate(-50%, -50%); padding: 10px; color: white;">
+                Bộ sưu tập</h2>
+        </div>
         <div class="container">
-            <div class="row p-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4 p-4">
 
-                <div class="col-md-6">
-                    <img src="assets/images/sale.jpg" alt="" class="img-fluid">
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/bst1.jpg" class="card-img-top" alt="bst1">
+                        <div class="card-body">
+                            <h5 class="card-title">BST Maxine – nét nâu trầm sang trọng</h5>
+                            <p class="card-text">BST nội thất Maxine mang phong cách hiện đại với các chi tiết sang
+                                trọng và quyến rũ đến kỳ [...]</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6 ">**KHUYẾN MÃI SỐC: GIẢM GIÁ 50% CHO MỌI SẢN PHẨM!**
-
-                    <p>🎉 Chào mừng bạn đến với chương trình khuyến mãi cực kỳ hấp dẫn của chúng tôi! Bạn đã sẵn sàng để
-                        trải
-                        nghiệm sự hạnh phúc của việc mua sắm với giá ưu đãi chưa? Hãy cùng chúng tôi khám phá những điều
-                        tuyệt
-                        vời mà chúng tôi đã dành cho bạn!</p>
-
-                    <p>🛍️ **50% GIẢM GIÁ CHO MỌI SẢN PHẨM**: Đã đến lúc thỏa thích mua sắm mà không lo về giá cả! Tất
-                        cả
-                        các
-                        sản phẩm đều được giảm nguyên nửa giá gốc - cơ hội không thể tốt hơn để bạn sắm sửa, cập nhật tủ
-                        đồ,
-                        hoặc chăm sóc bản thân và gia đình.</p>
-
-                    <p>🎁 **SẢN PHẨM ĐA DẠNG - CHẤT LƯỢNG KHÔNG ĐỐI THỦ**: Chúng tôi tự hào mang đến cho bạn một bộ sưu
-                        tập
-                        đa
-                        dạng với hàng ngàn sản phẩm chất lượng cao từ các thương hiệu nổi tiếng. Từ thời trang, phụ
-                        kiện, đồ
-                        gia
-                        dụng cho đến mỹ phẩm và nhiều hơn nữa - bạn sẽ dễ dàng tìm thấy những sản phẩm mà mình yêu
-                        thích.
-                    </p>
-
-                    <p>⏰ **THỜI GIAN KHUYẾN MÃI HẠN CHẾ**: Đừng bỏ lỡ cơ hội duy nhất này! Chương trình khuyến mãi chỉ
-                        diễn
-                        ra
-                        trong thời gian giới hạn. Hãy nhanh tay đặt hàng để đảm bảo bạn không bỏ lỡ việc mua sắm với mức
-                        giá
-                        ưu
-                        đãi chưa từng thấy!</p>
-
-                    <p>🚀 **MUA NGAY - TIẾT KIỆM NGAY**: Đừng để cơ hội trôi qua! Hãy truy cập website của chúng tôi
-                        ngay
-                        hôm
-                        nay để thỏa sức mua sắm và tiết kiệm đến 50% cho mỗi đơn hàng. Số lượng có hạn, nhanh tay lựa
-                        chọn
-                        những
-                        sản phẩm ưa thích của bạn!</p>
-
-                    <p>📞 **LIÊN HỆ CHÚNG TÔI**: Nếu bạn có bất kỳ câu hỏi hoặc cần hỗ trợ, đừng ngần ngại liên hệ với
-                        đội
-                        ngũ
-                        chăm sóc khách hàng của chúng tôi. Chúng tôi luôn sẵn sàng giúp bạn để bạn có trải nghiệm mua
-                        sắm
-                        tốt
-                        nhất.</p>
-
-                    <p>🛒 **MUA SẮM THẢ GA - KHÔNG LO VỀ GIÁ!** Hãy đảm bảo bạn đã đến đúng thời điểm để trải nghiệm ưu
-                        đãi
-                        hấp
-                        dẫn nhất trong năm. Mua sắm thông minh - tiết kiệm lớn!</p>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/bst2.jpg" class="card-img-top" alt="bst2">
+                        <div class="card-body">
+                            <h5 class="card-title">BST Bụi – cá tính và trẻ trung</h5>
+                            <p class="card-text">Với chất riêng trẻ trung và phá cách, BST Bụi mang đến không gian những
+                                sản phẩm nhỏ gọn, hiện [...]</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/bst3.jpg" class="card-img-top" alt="bst3">
+                        <div class="card-body">
+                            <h5 class="card-title">BST Miami – gọn gàng không gian hiện đại</h5>
+                            <p class="card-text">Bộ sưu tập Miami nhỏ gọn nhưng hiện đại và thanh lịch giúp không gian
+                                năng động và xinh xắn. [...]</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/bst4.jpg" class="card-img-top" alt="bst">
+                        <div class="card-body">
+                            <h5 class="card-title">BST Pio – hòa quyện nét hiện đại và sự gần gũi
+                            </h5>
+                            <p class="card-text">Bộ sưu tập nội thất Pio với chất liệu công nghiệp kết hợp cùng thiết kế
+                                hiện đại giúp không [...]
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-        </div>
+        </div><!-- div container -->
     </main>
-    <!-- footer -->
     <footer>
         <div>
             Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
