--- a/duanthicong.html
+++ b/duanthicong.html
@@ -14,9 +14,14 @@
     <link rel="icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <style>
-        .text {
-            line-height: 1.5;
-            font-size: 20px;
+        .card-text {
+
+            text-align: center;
+        }
+
+        h5 {
+            text-align: center;
+
         }
     </style>
 </head>
@@ -212,71 +217,55 @@
         </div>
     </nav>
     <main>
+        <div>
+            <h3 style="text-align: center; margin-top: 20px; color: green;">DỰ ÁN THI CÔNG</h3>
+        </div>
         <div class="container">
-            <div class="row p-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4 p-4">
 
-                <div class="col-md-6">
-                    <img src="assets/images/sale.jpg" alt="" class="img-fluid">
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/duan1.jpg" class="card-img-top" height="350px" alt="duan1">
+                        <div class="card-body">
+                            <h5 class="card-title">Thiết kế căn hộ The Cove Empire 4PN</h5>
+                            <p class="card-text">Những gợi ý thiết kế nội thất Dự án The Cove Empire dưới đây sẽ giúp
+                                [...]</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6 ">**KHUYẾN MÃI SỐC: GIẢM GIÁ 50% CHO MỌI SẢN PHẨM!**
-
-                    <p>🎉 Chào mừng bạn đến với chương trình khuyến mãi cực kỳ hấp dẫn của chúng tôi! Bạn đã sẵn sàng để
-                        trải
-                        nghiệm sự hạnh phúc của việc mua sắm với giá ưu đãi chưa? Hãy cùng chúng tôi khám phá những điều
-                        tuyệt
-                        vời mà chúng tôi đã dành cho bạn!</p>
-
-                    <p>🛍️ **50% GIẢM GIÁ CHO MỌI SẢN PHẨM**: Đã đến lúc thỏa thích mua sắm mà không lo về giá cả! Tất
-                        cả
-                        các
-                        sản phẩm đều được giảm nguyên nửa giá gốc - cơ hội không thể tốt hơn để bạn sắm sửa, cập nhật tủ
-                        đồ,
-                        hoặc chăm sóc bản thân và gia đình.</p>
-
-                    <p>🎁 **SẢN PHẨM ĐA DẠNG - CHẤT LƯỢNG KHÔNG ĐỐI THỦ**: Chúng tôi tự hào mang đến cho bạn một bộ sưu
-                        tập
-                        đa
-                        dạng với hàng ngàn sản phẩm chất lượng cao từ các thương hiệu nổi tiếng. Từ thời trang, phụ
-                        kiện, đồ
-                        gia
-                        dụng cho đến mỹ phẩm và nhiều hơn nữa - bạn sẽ dễ dàng tìm thấy những sản phẩm mà mình yêu
-                        thích.
-                    </p>
-
-                    <p>⏰ **THỜI GIAN KHUYẾN MÃI HẠN CHẾ**: Đừng bỏ lỡ cơ hội duy nhất này! Chương trình khuyến mãi chỉ
-                        diễn
-                        ra
-                        trong thời gian giới hạn. Hãy nhanh tay đặt hàng để đảm bảo bạn không bỏ lỡ việc mua sắm với mức
-                        giá
-                        ưu
-                        đãi chưa từng thấy!</p>
-
-                    <p>🚀 **MUA NGAY - TIẾT KIỆM NGAY**: Đừng để cơ hội trôi qua! Hãy truy cập website của chúng tôi
-                        ngay
-                        hôm
-                        nay để thỏa sức mua sắm và tiết kiệm đến 50% cho mỗi đơn hàng. Số lượng có hạn, nhanh tay lựa
-                        chọn
-                        những
-                        sản phẩm ưa thích của bạn!</p>
-
-                    <p>📞 **LIÊN HỆ CHÚNG TÔI**: Nếu bạn có bất kỳ câu hỏi hoặc cần hỗ trợ, đừng ngần ngại liên hệ với
-                        đội
-                        ngũ
-                        chăm sóc khách hàng của chúng tôi. Chúng tôi luôn sẵn sàng giúp bạn để bạn có trải nghiệm mua
-                        sắm
-                        tốt
-                        nhất.</p>
-
-                    <p>🛒 **MUA SẮM THẢ GA - KHÔNG LO VỀ GIÁ!** Hãy đảm bảo bạn đã đến đúng thời điểm để trải nghiệm ưu
-                        đãi
-                        hấp
-                        dẫn nhất trong năm. Mua sắm thông minh - tiết kiệm lớn!</p>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/duan2.jpg" class="card-img-top" height="350px" alt="duan2">
+                        <div class="card-body">
+                            <h5 class="card-title">Thiết kế biệt thự Nine South</h5>
+                            <p class="card-text">Những gợi ý thiết kế nội thất Dự án Nine South dưới đây sẽ giúp
+                                ích[...]</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/duan3.jpg" class="card-img-top" height="350px" alt="duan3">
+                        <div class="card-body">
+                            <h5 class="card-title">Thiết kế căn hộ D’Edge 3PN</h5>
+                            <p class="card-text">Những gợi ý thiết kế nội thất Dự án D'Edge 3PN quận 2 Sài Gòn [...]</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/images/duan4.jpg" class=" card-img-top" height="350px" alt="duan4">
+                        <div class="card-body">
+                            <h5 class="card-title">Thiết kế căn hộ The Collection</h5>
+                            <p class="card-text">Dự án thiết kế nội thất The Collection dưới đây sẽ giúp ích cho bạn.
+                                [...]
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-        </div>
+        </div><!-- div container -->
     </main>
-    <!-- footer -->
     <footer>
         <div>
             Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
