--- a/gioithieu.html
+++ b/gioithieu.html
@@ -78,7 +78,7 @@
                                     <a href="khuyenmai.html">Khuyến mãi</a>
                                 </li>
                                 <li class="py-1 fw-500 border-bottom">
-                                    <a>Giảm giá đặc biệt</a>
+                                    <a href="giamgiadacbiet.html">Giảm giá đặc biệt</a>
                                 </li>
 
                             </ul>
@@ -110,7 +110,7 @@
                         <div class="px-5 d-flex gap-3">
                             <a href="gioithieu.html">Giới thiệu</a>
                             <a href="khuyenmai.html">Khuyến mãi</a>
-                            <a href="">Giảm giá đặc biệt</a>
+                            <a href="giamgiadacbiet.html">Giảm giá đặc biệt</a>
                         </div>
                     </div>
 
@@ -190,8 +190,8 @@
                             </li>
                         </ul>
                     </div>
-                    <a class="text-decoration-none text-black fw-normal" href="">BỘ SƯU TẬP</a>
-                    <a class="text-decoration-none text-black fw-normal" href="">ẢNH THI CÔNG</a>
+                    <a class="text-decoration-none text-black fw-normal" href="bosuutap.html">BỘ SƯU TẬP</a>
+                    <a class="text-decoration-none text-black fw-normal" href="duanthicong.html">DỰ ÁN THI CÔNG</a>
                     <a class="text-decoration-none text-black fw-normal" href="">TƯ VẪN MẪU</a>
 
 
@@ -225,7 +225,7 @@
                 tại các thành phố lớn là Hà Nội và TP.HCM, Bình Dương.</p>
             <div class="row">
                 <div class="col-md-5">
-                    <img src="./assets/images/gt1.jpg" alt="" width="500px" height="700px">
+                    <img src="./assets/images/gt1.jpg" alt="" width="500px" height="700px" class="img-fluid">
 
                 </div>
                 <div class="col-md-7">
@@ -241,7 +241,7 @@
             </div>
             <div class="row p-2">
                 <div class="col-md-5">
-                    <img src="./assets/images/gt2.jpg" alt="" width="500px" height="700px">
+                    <img src="./assets/images/gt2.jpg" alt="" width="500px" height="700px" class="img-fluid">
 
                 </div>
                 <div class="col-md-7">
@@ -268,6 +268,10 @@
                         riêng với cách bày trí hài hòa từ đồ nội thất kết hợp với đồ trang trí. Giúp khách hàng cảm
                         nhận
                         được một không gian sống thực sự, cảm thấy thoải mái để tận hưởng cuộc sống.</p>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
@@ -279,9 +283,7 @@
 
 
 
-    </div>
-    </div>
-    </div>
+
     <!-- / -->
     <script>
         window.addEventListener("offline", () => alert("Hãy kết nối internet."))
