--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                             </li>
                         </ul>
                     </div>
-                    <a class="text-decoration-none text-black fw-normal" href="">BỘ SƯU TẬP</a>
-                    <a class="text-decoration-none text-black fw-normal" href="">ẢNH THI CÔNG</a>
+                    <a class="text-decoration-none text-black fw-normal" href="bosuutap.html">BỘ SƯU TẬP</a>
+                    <a class="text-decoration-none text-black fw-normal" href="duanthicong.html">DỰ ÁN THI CÔNG</a>
                     <a class="text-decoration-none text-black fw-normal" href="">TƯ VẪN MẪU</a>
 
 
