--- a/tuvanmau.html
+++ b/tuvanmau.html
@@ -14,9 +14,14 @@
     <link rel="icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <style>
-        .text {
-            line-height: 1.5;
-            font-size: 20px;
+        .card-text {
+
+            text-align: center;
+        }
+
+        h5 {
+            text-align: center;
+
         }
     </style>
 </head>
@@ -213,70 +218,57 @@
     </nav>
     <main>
         <div class="container">
-            <div class="row p-4">
+            <div>
+                <h3 style="text-align: center; margin-top: 20px; color: green;">TƯ VẤN MẪU</h3>
+                <img src="assets/images/tuvanmau.jpg" class="d-block w-100" height="700" alt="ảnh">
+            </div>
+            <div class="row p-3">
+                <div class="col-md-4">
+                    <h3>1. Chọn màu sắc tươi sáng</h3>
+                    <p>Tông màu không thể thiếu khi nhắc đến biển chính là sắc xanh dịu mát. Bạn có thể chọn những chiếc
+                        sofa với bề mặt vải mềm mịn, mang sắc xanh của biển để đặt trong không gian phòng khách. </p>
+                    <p>
 
-                <div class="col-md-6">
-                    <img src="assets/images/sale.jpg" alt="" class="img-fluid">
+                        Và càng tuyệt vời hơn nữa khi phòng khách được lấp đầy bởi ánh sáng tự nhiên. Để tăng thêm tính
+                        thơ mộng cho không gian, bạn có thể bài trí thêm những tấm rèm voan trắng nhẹ nhàng. Ánh nắng
+                        chiếu nhẹ qua lớp rèm voan cùng với làn gió thoảng mang theo nguồn sinh khí tươi mới, lan tỏa
+                        khắp không gian. Sắc xanh và trắng cùng ánh nắng vàng nhẹ cứ thế hòa quyện vào nhau, tạo nên bản
+                        giao hưởng yên bình.</p>
                 </div>
-                <div class="col-md-6 ">**KHUYẾN MÃI SỐC: GIẢM GIÁ 50% CHO MỌI SẢN PHẨM!**
-
-                    <p>🎉 Chào mừng bạn đến với chương trình khuyến mãi cực kỳ hấp dẫn của chúng tôi! Bạn đã sẵn sàng để
-                        trải
-                        nghiệm sự hạnh phúc của việc mua sắm với giá ưu đãi chưa? Hãy cùng chúng tôi khám phá những điều
-                        tuyệt
-                        vời mà chúng tôi đã dành cho bạn!</p>
-
-                    <p>🛍️ **50% GIẢM GIÁ CHO MỌI SẢN PHẨM**: Đã đến lúc thỏa thích mua sắm mà không lo về giá cả! Tất
-                        cả
-                        các
-                        sản phẩm đều được giảm nguyên nửa giá gốc - cơ hội không thể tốt hơn để bạn sắm sửa, cập nhật tủ
-                        đồ,
-                        hoặc chăm sóc bản thân và gia đình.</p>
-
-                    <p>🎁 **SẢN PHẨM ĐA DẠNG - CHẤT LƯỢNG KHÔNG ĐỐI THỦ**: Chúng tôi tự hào mang đến cho bạn một bộ sưu
-                        tập
-                        đa
-                        dạng với hàng ngàn sản phẩm chất lượng cao từ các thương hiệu nổi tiếng. Từ thời trang, phụ
-                        kiện, đồ
-                        gia
-                        dụng cho đến mỹ phẩm và nhiều hơn nữa - bạn sẽ dễ dàng tìm thấy những sản phẩm mà mình yêu
-                        thích.
-                    </p>
-
-                    <p>⏰ **THỜI GIAN KHUYẾN MÃI HẠN CHẾ**: Đừng bỏ lỡ cơ hội duy nhất này! Chương trình khuyến mãi chỉ
-                        diễn
-                        ra
-                        trong thời gian giới hạn. Hãy nhanh tay đặt hàng để đảm bảo bạn không bỏ lỡ việc mua sắm với mức
-                        giá
-                        ưu
-                        đãi chưa từng thấy!</p>
-
-                    <p>🚀 **MUA NGAY - TIẾT KIỆM NGAY**: Đừng để cơ hội trôi qua! Hãy truy cập website của chúng tôi
-                        ngay
-                        hôm
-                        nay để thỏa sức mua sắm và tiết kiệm đến 50% cho mỗi đơn hàng. Số lượng có hạn, nhanh tay lựa
-                        chọn
-                        những
-                        sản phẩm ưa thích của bạn!</p>
-
-                    <p>📞 **LIÊN HỆ CHÚNG TÔI**: Nếu bạn có bất kỳ câu hỏi hoặc cần hỗ trợ, đừng ngần ngại liên hệ với
-                        đội
-                        ngũ
-                        chăm sóc khách hàng của chúng tôi. Chúng tôi luôn sẵn sàng giúp bạn để bạn có trải nghiệm mua
-                        sắm
-                        tốt
-                        nhất.</p>
-
-                    <p>🛒 **MUA SẮM THẢ GA - KHÔNG LO VỀ GIÁ!** Hãy đảm bảo bạn đã đến đúng thời điểm để trải nghiệm ưu
-                        đãi
-                        hấp
-                        dẫn nhất trong năm. Mua sắm thông minh - tiết kiệm lớn!</p>
+                <div class="col-md-8"><img src="assets/images/tuvanmau1.jpg" class="d-block w-100" height="500" alt="">
                 </div>
             </div>
+            <div class="row p-3">
+                <div class="col-md-5">
+                    <h3>2. Ưu tiên đường cong và sự thoải mái</h3>
+                    <p>Yếu tố quan trọng để trải nghiệm sắc biển ngay trong căn hộ chính là cảm giác thư giãn bên cạnh
+                        những đường nét gợn sóng nhẹ nhàng. Các món đồ nội thất được loại bỏ hoàn toàn các cạnh viền
+                        vuông vức, thay vào đó là những đường cong mềm mại, dễ chịu. Bàn nước hay bàn bên Coastal đều
+                        được gọt dũa với các cạnh bo viền tinh tế, mang đến không gian an bình, thư thái, tựa như cảm
+                        giác được nâng niu trên mặt nước bồng bềnh. </p>
+                </div>
+                <div class="col-md-7"><img src="assets/images/tuvanmau2.jpg" class="d-block w-100" height="500"
+                        alt="ảnh">
+                </div>
+            </div>
+            <div class="row p-3">
+                <div class="col-md-7"><img src="assets/images/tuvanmau3.jpg" class="d-block w-100" height="500" alt="">
+                </div>
+                <div class="col-md-5">
+                    <h3>3. Gắn tranh treo tường mang hơi thở của biển</h3>
+                    <p>Yếu tố quan trọng để trải nghiệm sắc biển ngay trong căn hộ chính là cảm giác thư giãn bên cạnh
+                        những đường nét gợn sóng nhẹ nhàng. Các món đồ nội thất được loại bỏ hoàn toàn các cạnh viền
+                        vuông vức, thay vào đó là những đường cong mềm mại, dễ chịu. Bàn nước hay bàn bên Coastal đều
+                        được gọt dũa với các cạnh bo viền tinh tế, mang đến không gian an bình, thư thái, tựa như cảm
+                        giác được nâng niu trên mặt nước bồng bềnh. </p>
+                </div>
 
+            </div>
         </div>
+
+
+        <!-- div container -->
     </main>
-    <!-- footer -->
     <footer>
         <div>
             Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
