--- a/giamgiadacbiet.html
+++ b/giamgiadacbiet.html
@@ -33,11 +33,9 @@
                                 d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                         </svg>
                     </button>
-
                     <a class="d-lg-none">
                         <img height="60" src="./assets/images/logo.jpg" />
                     </a>
-
                     <div id="mobile-sidebar"
                         class="d-none d-lg-none position-fixed top-0 start-0 w-100 h-100 bg-black text-dark bg-opacity-25">
                         <div style="width: 300px;" class="p-2 h-100 bg-white">
@@ -190,8 +188,8 @@
                             </li>
                         </ul>
                     </div>
-                    <a class="text-decoration-none text-black fw-normal" href="">BỘ SƯU TẬP</a>
-                    <a class="text-decoration-none text-black fw-normal" href="">ẢNH THI CÔNG</a>
+                    <a class="text-decoration-none text-black fw-normal" href="bosuutap.html">BỘ SƯU TẬP</a>
+                    <a class="text-decoration-none text-black fw-normal" href="duanthicong.html">DỰ ÁN THI CÔNG</a>
                     <a class="text-decoration-none text-black fw-normal" href="">TƯ VẪN MẪU</a>
 
 
@@ -212,63 +210,82 @@
         </div>
     </nav>
     <main>
-        <div class="row p-2 ">
-            <div class="col-md-4">
-                <img src="assets/images/sale2.jpg" alt="" width="700px" class="img-fluid">
+        <div class="container">
+            <div class="row p-5 ">
+                <div class="col-md-6">
+                    <img src="assets/images/sale2.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-6 p-2">
+                    <p>🎉🏠 Ưu đãi Cực Kỳ Đặc Biệt: GIẢM GIÁ 70% cho Giấy Gián Tường - Chỉ trong 1 Ngày! 🏠🎉</p>
+
+                    <p>Chào mừng bạn đến với ngày hội mua sắm "Trang trí tổ ấm"! Để chào mừng mùa hè, chúng tôi tự hào
+                        giới
+                        thiệu chương trình khuyến mãi cực kỳ hấp dẫn. Chỉ trong 1 ngày duy nhất, bạn sẽ có cơ hội sở hữu
+                        Giấy
+                        Gián Tường chất lượng cao với mức giảm giá KHỦNG - 70%!</p>
+
+                    <p>🏡 Bạn đang tìm cách làm mới không gian sống? Giấy gián tường là giải pháp hoàn hảo để thay đổi
+                        diện
+                        mạo
+                        cho căn nhà của bạn. Từ những họa tiết đơn giản, trừu tượng đến những hình ảnh sống động, chúng
+                        tôi
+                        có
+                        đủ các lựa chọn để bạn có thể tạo nên không gian sống hoàn hảo theo phong cách riêng.</p>
+
+                    <p>🛋️ Hãy tận dụng cơ hội này để biến những ý tưởng trang trí thành hiện thực mà không cần phải lo
+                        lắng
+                        về
+                        ngân sách. Chúng tôi cam kết mang đến cho bạn sự hài lòng với sản phẩm chất lượng và mức giá
+                        không
+                        thể
+                        tốt hơn.</p>
+
+                    <p>⏰ Thời gian ưu đãi có hạn - chỉ diễn ra trong 1 ngày duy nhất. Đừng bỏ lỡ cơ hội để thay đổi
+                        không
+                        gian
+                        sống của bạn một cách độc đáo và tiết kiệm lớn. Ghé thăm trang web của chúng tôi hoặc đến cửa
+                        hàng
+                        gần
+                        bạn để trải nghiệm những mẫu mã đẹp mắt và chọn cho mình những tấm giấy gián tường ưng ý nhất.
+                    </p>
+
+                    <p>Ưu đãi chỉ áp dụng trong 1 ngày, hãy nhanh tay để không bỏ lỡ! 🛍️🏠</p>
+
+                </div>
             </div>
-            <div class="col-md-8 p-2">
-                <p>🎉🏠 Ưu đãi Cực Kỳ Đặc Biệt: GIẢM GIÁ 70% cho Giấy Gián Tường - Chỉ trong 1 Ngày! 🏠🎉</p>
 
-                <p>Chào mừng bạn đến với ngày hội mua sắm "Trang trí tổ ấm"! Để chào mừng mùa hè, chúng tôi tự hào giới
-                    thiệu chương trình khuyến mãi cực kỳ hấp dẫn. Chỉ trong 1 ngày duy nhất, bạn sẽ có cơ hội sở hữu
-                    Giấy
-                    Gián Tường chất lượng cao với mức giảm giá KHỦNG - 70%!</p>
-
-                <p>🏡 Bạn đang tìm cách làm mới không gian sống? Giấy gián tường là giải pháp hoàn hảo để thay đổi diện
-                    mạo
-                    cho căn nhà của bạn. Từ những họa tiết đơn giản, trừu tượng đến những hình ảnh sống động, chúng tôi
-                    có
-                    đủ các lựa chọn để bạn có thể tạo nên không gian sống hoàn hảo theo phong cách riêng.</p>
-
-                <p>🛋️ Hãy tận dụng cơ hội này để biến những ý tưởng trang trí thành hiện thực mà không cần phải lo lắng
-                    về
-                    ngân sách. Chúng tôi cam kết mang đến cho bạn sự hài lòng với sản phẩm chất lượng và mức giá không
-                    thể
-                    tốt hơn.</p>
-
-                <p>⏰ Thời gian ưu đãi có hạn - chỉ diễn ra trong 1 ngày duy nhất. Đừng bỏ lỡ cơ hội để thay đổi không
-                    gian
-                    sống của bạn một cách độc đáo và tiết kiệm lớn. Ghé thăm trang web của chúng tôi hoặc đến cửa hàng
-                    gần
-                    bạn để trải nghiệm những mẫu mã đẹp mắt và chọn cho mình những tấm giấy gián tường ưng ý nhất.</p>
-
-                <p>Ưu đãi chỉ áp dụng trong 1 ngày, hãy nhanh tay để không bỏ lỡ! 🛍️🏠</p>
-
-            </div>
+            <!-- div container -->
+        </div>
+    </main>
+    <footer>
+        <div>
+            Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
         </div>
 
-
-
-        <!-- / -->
-        <script>
-            window.addEventListener("offline", () => alert("Hãy kết nối internet."))
-            window.onload = function () {
-                showAlert();
-            };
+    </footer>
 
 
 
-            const toggleToggleSidebar = () => {
-                const sidebar = document.getElementById("mobile-sidebar")
-                const hidden = sidebar.classList.contains("d-none")
-                sidebar.classList.toggle("d-none", !hidden)
-            }
+    <!-- / -->
+    <script>
+        window.addEventListener("offline", () => alert("Hãy kết nối internet."))
+        window.onload = function () {
+            showAlert();
+        };
 
-            document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
-            document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
-        </script>
 
-        <script src="./assets/js/main.js"></script>
+
+        const toggleToggleSidebar = () => {
+            const sidebar = document.getElementById("mobile-sidebar")
+            const hidden = sidebar.classList.contains("d-none")
+            sidebar.classList.toggle("d-none", !hidden)
+        }
+
+        document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
+        document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
+    </script>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
