--- a/duanthicong.html
+++ b/duanthicong.html
@@ -197,9 +197,7 @@
                     </div>
                     <a class="text-decoration-none text-black fw-normal" href="bosuutap.html">BỘ SƯU TẬP</a>
                     <a class="text-decoration-none text-black fw-normal" href="duanthicong.html">DỰ ÁN THI CÔNG</a>
-                    <a class="text-decoration-none text-black fw-normal" href="">TƯ VẪN MẪU</a>
-
-
+                    <a class="text-decoration-none text-black fw-normal" href="tuvanmau.html">TƯ VẪN MẪU</a>
                 </div>
 
                 <div style="width: 300px;" class="d-flex align-items-center px-3 py-1 border rounded-5 overflow-hidden">
