--- a/tuvanmau.html
+++ b/tuvanmau.html
@@ -220,7 +220,7 @@
         <div class="container">
             <div>
                 <h3 style="text-align: center; margin-top: 20px; color: green;">TƯ VẤN MẪU</h3>
-                <img src="assets/images/tuvanmau.jpg" class="d-block w-100" height="700" alt="ảnh">
+                <img src="assets/images/tuvanmau.jpg" class="d-block w-100 img-fluid" height="700" alt="ảnh">
             </div>
             <div class="row p-3">
                 <div class="col-md-4">
@@ -235,7 +235,8 @@
                         khắp không gian. Sắc xanh và trắng cùng ánh nắng vàng nhẹ cứ thế hòa quyện vào nhau, tạo nên bản
                         giao hưởng yên bình.</p>
                 </div>
-                <div class="col-md-8"><img src="assets/images/tuvanmau1.jpg" class="d-block w-100" height="500" alt="">
+                <div class="col-md-8"><img src="assets/images/tuvanmau1.jpg" class="d-block w-100 img-fluid"
+                        height="500" alt="">
                 </div>
             </div>
             <div class="row p-3">
@@ -247,12 +248,13 @@
                         được gọt dũa với các cạnh bo viền tinh tế, mang đến không gian an bình, thư thái, tựa như cảm
                         giác được nâng niu trên mặt nước bồng bềnh. </p>
                 </div>
-                <div class="col-md-7"><img src="assets/images/tuvanmau2.jpg" class="d-block w-100" height="500"
-                        alt="ảnh">
+                <div class="col-md-7"><img src="assets/images/tuvanmau2.jpg" class="d-block w-100 img-fluid"
+                        height="500" alt="ảnh">
                 </div>
             </div>
             <div class="row p-3">
-                <div class="col-md-7"><img src="assets/images/tuvanmau3.jpg" class="d-block w-100" height="500" alt="">
+                <div class="col-md-7"><img src="assets/images/tuvanmau3.jpg" class="d-block w-100 img-fluid"
+                        height="500" alt="">
                 </div>
                 <div class="col-md-5">
                     <h3>3. Gắn tranh treo tường mang hơi thở của biển</h3>
