--- a/giamgiadacbiet.html
+++ b/giamgiadacbiet.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <style>
-        .text {
+        .row {
             line-height: 1.5;
             font-size: 20px;
         }
