--- a/tuvanmau.html
+++ b/tuvanmau.html
@@ -15,8 +15,12 @@
     <link rel="shortcut icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <style>
         .card-text {
-
             text-align: center;
+        }
+
+        .row {
+            line-height: 1.5;
+            font-size: 20px;
         }
 
         h5 {
