--- a/khuyenmai.html
+++ b/khuyenmai.html
@@ -18,6 +18,11 @@
             line-height: 1.5;
             font-size: 20px;
         }
+
+        .row {
+            line-height: 1.5;
+            font-size: 20px;
+        }
     </style>
 </head>
 
