--- a/bosuutap.html
+++ b/bosuutap.html
@@ -18,6 +18,10 @@
             line-height: 1.5;
             font-size: 20px;
         }
+
+        h5 {
+            text-align: center;
+        }
     </style>
 </head>
 
